--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,10 @@
-#Etapa 1: Recursos
+#etapa 1 de recursos:
 FROM node:20 AS build
-
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
-
 COPY . .
-
+#Los siguientes argumentos quieren decir que se pueden pasar variables en tiempo de construccion
 ARG API_HOST
 ARG API_PORT
 ARG API_BASE
@@ -19,11 +15,12 @@ ENV VITE_API_BASE=$API_BASE
 
 RUN npm run build
 
-#Etapa 2: Imagen
+
+#etapa 2 de imagen:
 FROM nginx:alpine
-
 COPY --from=build /app/dist /usr/share/nginx/html
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
+#comentario: Esta es una imagen de nginx que sirve una aplicacion construida con node.js
+#comentario: La primera etapa construye la aplicacion y la segunda etapa sirve los archivos estaticos con nginx
+
