--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,9 @@
-FROM maven:3.9.9-eclipse-temurin-21
-
+FROM maven:3.9.5-eclipse-temurin-21
 WORKDIR /app
-
 COPY . .
-
-
-RUN mvn clean package -DskipTests && cp target/*.jar app.jar
-
+#mvn clean package -DskipTests = target/server-0.0.1-SNAPSHOT.jar
+#el cp target/*.jar app.jar es para renombrar el archivo jar generado a un nombre mas simple
+RUN mvn clean package -DskipTests &&  cp target/*.jar app.jar
 EXPOSE 8080
-
-
-ENTRYPOINT [ "java","-jar","app.jar"]
+#el ENTRYPOINT es para definir el comando que se ejecutara al iniciar el contenedor
+ENTRYPOINT ["java","-jar","app.jar"]
