--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,4 +55,4 @@ networks:
 # aqui configuro los volumenes que ocupan los contenedores
 volumes:
   adj-volume:
-    external: true
+    driver: local
